# wapc-cli

./: .gitignore  Cargo.toml  Makefile  README.md
src/: generate.rs  install.rs  main.rs  new.rs
tests/: common.rs  integration.rs
